src/components/PostHeader/styles.css
#post-header {
	max-width: 86rem;
	margin-inline: auto;
}

#post-header h1 {
	height: auto;
	font-size: clamp(2rem, 5vw, 4rem);
	font-weight: bold;

	overflow-wrap: break-word;
	word-break: break-word;
	line-break: loose;
	/* stylelint-disable-next-line property-no-vendor-prefix */
	-webkit-hyphens: auto;
	hyphens: auto;
	hyphenate-character: '-';
	hyphenate-limit-chars: 8 3 2;

	width: 100%;
	display: block;
	margin-inline: auto;

	text-wrap: balance;
	margin: 0;
	padding: 0;
}

#post-header header {
	justify-self: stretch;
	display: grid;
	place-items: end center;
	gap: var(--spacing-medium);
	grid-template-rows: auto 1fr auto auto auto;
	grid-template-columns: 1fr 1fr;
	grid-template-areas:
		'menu hero-image'
		'title hero-image'
		'summary hero-image'
		'metadata metadata'
		'share share';
	padding: var(--spacing-large);
	margin: var(--spacing-large);
	background: var(--bg-color);
}

#post-header header:not(:has(#hero-image)) {
	grid-template-rows: 1fr auto auto auto;
	grid-template-columns: auto 1fr;
	grid-template-areas:
		'menu title'
		'summary summary'
		'metadata metadata'
		'share share';
}

#post-header #back-to-blog { grid-area: menu; }
#post-header #post-title { grid-area: title; }

#post-header #hero-image {
	width: 100%;
	height: 100%;
	object-fit: cover;
	grid-area: hero-image;
}

#post-summary {
	border: none;
	background: var(--dark-bg-color);
	font-size: smaller;
	margin: 0;
	padding: var(--spacing-large);
	grid-area: summary;
}

#post-summary p {
	padding: 0;
}

#post-metadata {
	grid-area: metadata;
	text-align: center;
	display: flex;
	justify-content: center;
	flex-direction: column;
	gap: var(--spacing-medium);
}

#post-metadata a {
	vertical-align: middle;
}

#post-share { grid-area: share; }

#post-share ul {
	display: flex;
	justify-content: center;
	gap: var(--spacing-large);
	list-style: none;
	padding: 0;
	margin: 0;
	margin-block: var(--spacing-medium);
}

#post-share button {
	--button-size: 2rem;

	display: flex;
	align-items: center;
	justify-content: center;
	width: var(--button-size);
	height: var(--button-size);
	padding: var(--spacing-medium);
	border: solid var(--border-width) var(--theme-color);
	background: var(--bg-color);
	border-radius: 100vmax;
	color: var(--theme-color);
}

#post-share button:focus {
	background-color: var(--theme-color);
	color: var(--text-color);
	border-color: var(--text-color);
}

#post-share button:hover {
	background-color: var(--dark-bg-color);
	color: var(--accent-color);
	border-color: var(--accent-color);
	outline-color: var(--accent-color);
}

#post-share button:active {
	background-color: var(--accent-color);
	color: var(--text-color);
	border-color: var(--text-color);
	outline-color: var(--text-color);
}

#post-share button svg {
	width: 100%;
	height: 100%;
	pointer-events: none;
}

@media (max-width: 650px) {
	#post-header header {
		grid-template-rows: auto 1fr auto auto auto auto;
		grid-template-columns: 1fr;
		grid-template-areas:
			'menu'
			'hero-image'
			'title'
			'summary'
			'metadata'
			'share';
	}

	#post-share button { --button-size: 2.5rem; }
}

